2009-09-09	Joel Sherrill <joel.sherrill@OARcorp.com>

	* sp46/init.c, sp46/sp46.scn: Fix numbering.

2009-09-07	Sebastian Huber <Sebastian.Huber@embedded-brains.de>

	* spintrcritical_support/intrcritical.c: Fixed timing rountines.

2009-09-04	Joel Sherrill <joel.sherrill@oarcorp.com>

	* spfatal01/spfatal01.scn, spfatal01/testcase.h,
	spfatal02/spfatal02.scn, spfatal02/testcase.h,
	spfatal03/spfatal03.scn, spfatal03/testcase.h,
	spfatal04/spfatal04.scn, spfatal04/testcase.h,
	spfatal05/spfatal05.scn, spfatal05/testcase.h,
	spfatal06/spfatal06.scn, spfatal06/testcase.h,
	spfatal07/spfatal07.scn, spfatal07/testcase.h,
	spfatal08/spfatal08.scn, spfatal08/testcase.h,
	spfatal09/spfatal09.scn, spfatal09/testcase.h, spfatal10/Makefile.am,
	spfatal10/spfatal10.scn, spfatal11/Makefile.am,
	spfatal11/spfatal11.scn, spfatal12/Makefile.am,
	spfatal12/spfatal12.scn, spfatal_support/init.c: Make all fatal error
	tests use testcase.h and spfatal_support framework. Print test name
	herald in all cases.
	* spfatal10/testcase.h, spfatal11/testcase.h, spfatal12/testcase.h:
	New files.
	* spfatal10/init.c, spfatal11/init.c, spfatal12/init.c: Removed.

2009-09-04	Joel Sherrill <joel.sherrill@oarcorp.com>

	* spfatal07/testcase.h: Indicate test is not applicable on some
	architectures.

2009-08-28	Joel Sherrill <joel.sherrill@OARcorp.com>

	* Makefile.am: Fix spacing.

2009-08-26	Sebastian Huber <Sebastian.Huber@embedded-brains.de>

	* spstkalloc/init.c: Changed allocator signature. Functions are now
	static.

2009-08-25	Sebastian Huber <Sebastian.Huber@embedded-brains.de>

	* sp29/init.c: Fixed return value evaluation.
	* sp59/init.c, sp59/sp59.scn: Added status code assignment. Fixed typos.
	* sp63/init.c: Check return value of _Heap_Initialize().

2009-08-19	Joel Sherrill <joel.sherrill@OARcorp.com>

	* spwatchdog/spwatchdog.scn, spwatchdog/task1.c: Add test for
	_Watchdog_Report() when name is not NULL. This case was covered at
	-Os on erc32 but at -O2 we had more code.
