@@ -87,4 +87,5 @@ rtems_task_set_priority - use valid Idle thread id
 rtems_task_set_priority - clobber internal thread class info
 rtems_task_set_priority - use valid Idle thread id again
 rtems_task_set_priority - restore internal thread class info
+rtems_semaphore_release - good but uncreated ID - INVALID_ID - OK
 *** END OF TEST 43 ***
