@@ -30,8 +30,7 @@ rtems_task Init(
 
 #define CONFIGURE_MAXIMUM_TASKS             2
 #define CONFIGURE_MAXIMUM_TIMERS            1
-#define CONFIGURE_MAXIMUM_SEMAPHORES        1
+#define CONFIGURE_MAXIMUM_SEMAPHORES        2
 
 #include <rtems/confdefs.h>
-
 /* end of include file */
